# deep-coder

./: .gitignore  CMakeLists.txt
include/: enumerator.h  example-generator.h  find-program.h
include/dsl/: ast.h  interpreter.h  type.h
lib/: attribute.cc  dataset-generator.cc  example-generator.cc  find-program.cc
lib/dsl/: ast.cc  interpreter.cc  type.cc  utils.cc
python/: json_data_process.py  learner.py  model.py  predictor.py  settings.py  tensor_debug.py  tensor_flow_learner.py  tensor_flow_model.py
python/data/: program_data_2.json
src/: CMakeLists.txt  generate_dataset.cc  generate_program.cc
test/: CMakeLists.txt
