add_executable(gen_dataset generate_dataset.cc)
target_link_libraries(gen_dataset deepcoder)
if (CMAKE_COMPILER_IS_GNUCC)
	target_link_libraries(gen_dataset pthread)
endif()

add_executable(gen_program generate_program.cc)
target_link_libraries(gen_program deepcoder)
if (CMAKE_COMPILER_IS_GNUCC)
	target_link_libraries(gen_program pthread)
endif()
